<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="es.arjevi.ejerciciosandroid.Ejercicio1Activity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                style="@style/estilo_editText"
                android:id="@+id/a1_txt_nombre"
                android:hint="@string/hint_nombre" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                style="@style/estilo_editText"
                android:id="@+id/a1_txt_apellido"
                android:hint="@string/hint_apellido" />

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                style="@style/estilo_editText"
                android:id="@+id/a1_txt_edad"
                android:hint="@string/hint_edad" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/a1_bt_validar"
                style="@style/estilo_botton"
                android:text="@string/button_validar" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/a1_chk_terminos"
                android:text="@string/check_terminos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:text="@string/lbl_fecha" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"

                    android:id="@+id/a1_txt_dia"
                    style="@style/estilo_editText"
                    android:hint="@string/hint_dia" />

                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    style="@style/estilo_editText"
                    android:id="@+id/a1_txt_mes"
                    android:hint="@string/hint_mes"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />

                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/a1_txt_year"
                    style="@style/estilo_editText"
                    android:hint="@string/hint_year" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/a1_rg_sexo">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_hombre"
                        android:id="@+id/radioButton" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_mujer"
                        android:id="@+id/radioButton2" />
                </RadioGroup>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_eso"
                        android:id="@+id/a1_chk_eso" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_grado"
                        android:id="@+id/a1_chk_grado" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_universidad"
                        android:id="@+id/a1_chk_universidad" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_aceptar"
        android:id="@+id/a1_bt_aceptar"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
